--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/wnstj2007/calendar/issues"
   },
-  "homepage": "https://github.com/wnstj2007/calendar#readme"
+  "homepage": "https://github.com/wnstj2007/calendar#readme",
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "mongoose": "^6.0.10"
+  }
 }
